[package]
name = "rush_hour_gen"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rush_hour_gen"
path = "src/main.rs"

[dependencies]
rayon     = "1.10"   # Data-parallelism — uses all CPU cores automatically
rand      = { version = "0.8", features = ["small_rng"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
clap      = { version = "4", features = ["derive"] }  # CLI argument parsing
rustc-hash = "2.1.1"

[profile.release]
opt-level     = 3
lto           = "fat"    # Link-time optimisation across crates
codegen-units = 1        # Single CGU → better inlining
panic         = "abort"  # Smaller binary, slightly faster
